--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: php
 
-php: ["5.3", "5.4", "5.5"]
+php: ["5.3", "5.4", "5.5", "5.6", "hhvm", "hhvm-nightly"]
+
+matrix:
+    allow_failures: [{"php": "hhvm"}, {"php": "hhvm-nightly"}]
+    fast_finish: true
 
 env:
   global:
-    - ARCHER_PUBLISH_VERSION=5.5
+    - ARCHER_PUBLISH_VERSION=5.6
     - secure: "AcV7sTTDS29/wmn+mZjhBeDN7wHNJ4JVMcMrtzrjXuM8TM62YcI0C9Ih1kFM9H0aGAV2MZ5C6TNkG0W1Nc6QA2tx53rdQdsfUMc6YtNrTIeJZlLHC0sp1u4A5ZCOyKLooHNbB7ityENY3KGex7AifC8RkB+1DthM4WdiAWYvvoE="
 
 install:
